@@ -8,10 +8,9 @@
   and 1 (on). Other values can be used in future if needed.
 - Implement notifications in Task Switcher.
   - Grab the keyboard focus in task switcher view.
-  - Don't show inforbanners in task switcher view.
   - Make the operator logo disappear in task switcher view.
   - Show incoming event notification previews.
-  - Ellipsize/truncate thumbnail titles.
+  - Truncate thumbnail titles.
 
   - Enter the switcher when an application is closed
     and the switcher is not empty.
