@@ -1,3 +1,14 @@
+2008-11-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	Allow adding and show all its dialogs an application may have
+	in switcher view, including any kind of HildonNote:s.
+
+	* src/mb/hd-comp-mgr.c:
+	  Add all kinds of HildonNote:s to the switcher.
+	* src/home/hd-task-navigator.c:
+	  Handle more than one dialog per application.
+	* src/home/hd-switcher.c
+
 2008-11-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
 	* src/mb/hd-comp-mgr.c:
